	PR rtl-optimization/46865 	* rtl.c (rtx_equal_p_cb, rtx_equal_p): For last operand of 	ASM_OPERANDS and ASM_INPUT if integers are different, 	call locator_eq. 	* jump.c (rtx_renumbered_equal_p): Likewise.

* gcc.target/i386/pr46865-1.c: New test.
	* gcc.target/i386/pr46865-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167686 138bc75d-0d04-0410-961f-82ee72b054a4